<resources>
    <string name="app_name">Booking Room</string>
    <string name="lbl_gmail">E-mail</string>
    <string name="hint_email">yourname@gmail.com</string>
    <string name="lbl_psw">Password</string>
    <string name="hint_password">************</string>
    <string name="remember">Nhớ tài khoản</string>
    <string name="forgot_psw">Quên mật khẩu</string>
    <string name="review">Nhận xét</string>
    <string name="history">Lịch sử đặt phòng</string>
    <string name="roomCode">Mã phòng</string>
    <string name="categoryRoom">Loại Phòng</string>
    <string name="amountPerson">Số người</string>
    <string name="amountRoom">Số phòng</string>
    <string name="dateOfArrival">Ngày đến</string>
    <string name="dateGo">Ngày đi</string>
    <string name="createdDate">Ngày đặt</string>
    <string name="price">Giá</string>
    <string name="btn_login">Đăng Nhập</string>
    <string name="create_user">Tạo tài khoản</string>
    <string name="ed_create_user_name">Tên tài khoản</string>
    <string name="ed_create_psw">Mật khẩu</string>
    <string name="ed_customer">Tên người dùng</string>
    <string name="btn_register">Tạo</string>

    <string name="lbl_check_mail">Nhập mã xác nhập đã được gửi về mail để xác nhận tài khoản</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>
</resources>