<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_icon"
            android:src="@drawable/icon" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_edit_login"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="15dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_psw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_edit_login"
                android:drawableStart="@drawable/icon_psw"
                android:drawablePadding="15dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/cb_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorBlue"
                android:text="@string/remember"
                android:textColor="@color/colorBlue"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/lbl_forgot_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/forgot_psw"
                android:textColor="@color/colorBlue"
                android:textSize="20dp"
                android:textStyle="italic" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/btn_event"
            android:layout_marginTop="30dp"
            android:text="@string/btn_login"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/lbl_create_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:paddingRight="20dp"
            android:text="@string/create_user"
            android:textColor="@color/colorBlue"
            android:textSize="20dp" />
    </LinearLayout>


</RelativeLayout>