<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreatedUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_customer"
                android:background="@drawable/shape_edit_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:hint="@string/ed_customer" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_gmail"
                android:background="@drawable/shape_edit_login"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_psw"
                android:drawableStart="@drawable/icon_psw"
                android:drawablePadding="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_edit_login"
                android:hint="@string/ed_create_psw"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:paddingLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Giới Tính :"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:id="@+id/gender"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/male"
                    android:text="Nam"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/female"
                    android:text="Nữ"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/btn_event"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/btn_register" />
    </LinearLayout>
</RelativeLayout>